Ozhaev Zaynudin Sharik3.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:36:9: error: redeclaration of 'int x3'
     int x3 = 100,  y3 = 150,
         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:32:9: error: 'int x3' previously declared here
     int x3 = 100,  y3 = 150,
         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:36:20: error: redeclaration of 'int y3'
     int x3 = 100,  y3 = 150,
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:32:20: error: 'int y3' previously declared here
     int x3 = 100,  y3 = 150,
                    ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:37:8: error: redeclaration of 'int vx3'
        vx3 =   5, vy3 =   3,
        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:33:5: error: 'int vx3' previously declared here
     vx3 =   5, vy3 =   3,
     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:37:19: error: redeclaration of 'int vy3'
        vx3 =   5, vy3 =   3,
                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:33:16: error: 'int vy3' previously declared here
     vx3 =   5, vy3 =   3,
                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:38:9: error: redeclaration of 'int r3'
         r3 =  15;
         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:34:6: error: 'int r3' previously declared here
      r3 =  15;
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:52:40: error: 'TX_LIGHTBROWN' was not declared in this scope
         DrowBall(x4, y4, vx4, vy4, r4, TX_LIGHTBROWN, TX_BROWN);
                                        ^
---------------------------------------------------------------------------------------------
[31.05.2021  2:55:44,01 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
